Add deprecation comment for scenario simulator interface
Added a comment indicating the interface is deprecated in favor of a simpler design.

--- a/scenario_simulator.html
+++ b/scenario_simulator.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- This interface is no longer being used for this project, this has a more futurstic look but we wanted to go for something simpler -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
